# esp32s3_demo_code

./: CMakeLists.txt  partitions_8MiB.csv
.cache/clangd/index/: led.c.2D097AF7F4142809.idx  led.h.B10CD5CEAC00E772.idx  led_common.h.2C9E0EDC59E91180.idx  led_convert.c.8F09337B67FB1AFD.idx  led_convert.h.1519B293294673E5.idx  led_gamma.c.5C4A7F53F13A4E8C.idx  led_gamma.h.240B3BCE14A8193D.idx  led_indicator.c.D1183C7336DB420D.idx  led_indicator.h.30AEB0CAE120D522.idx  led_indicator_blink_default.c.162DB77078DA84DB.idx  led_indicator_blink_default.h.1CD930288CB62831.idx  led_indicator_gpio.c.6A4D9D8E749F6AFF.idx  led_indicator_gpio.h.2F08553288E0BFC7.idx  led_indicator_ledc.c.089939B058746CA0.idx  led_indicator_ledc.h.8D3AF6863CC6539E.idx  led_indicator_rgb.c.78D5B866B518E27D.idx  led_indicator_rgb.h.28A90D53402FBF8A.idx  led_indicator_strips.c.F5441F2EC1A52E14.idx  led_indicator_strips.h.5AEA79AB245F6B87.idx  led_strip.h.D94F756C4337A801.idx  led_strip_api.c.333CC97EC2FA3D1F.idx  led_strip_interface.h.32B9441F9507CC43.idx  led_strip_rmt.h.6F90847CDC15D89A.idx  led_strip_rmt_dev.c.A476709ECAC838A4.idx  led_strip_rmt_encoder.c.1566447C11AFC5A1.idx  led_strip_rmt_encoder.h.6A5A5CEA91034D02.idx  led_strip_spi.h.8376732EEECBDFA4.idx  led_strip_spi_dev.c.4EA358E772FC1605.idx  led_strip_types.h.E4253034C1916875.idx  led_types.h.DD1A4B6FFCFA0230.idx  main.c.139BA2D2A6BB956F.idx
components/BSP/: CMakeLists.txt
components/BSP/LED/: led.c  led.h
main/: main.c
